src/App.css
/* ... */
.currentProjectDesc{
  font-family: 'Bungee Inline', cursive;
  transform: skewY(11deg);
  color: white;
  font-weight: bold;
  font-size: 20px;
  margin-left: 100px;
  margin-right: 100px;
  padding-bottom: 30px;
  text-shadow: 1px 1px black;
}

.deployedAppsContainer{
  width:800px;
  margin: auto;
}

.deployedApps{
  height:400px;
  width: 100%;
  display:flex;
  align-items: center;
  background-color: white;
  margin-bottom: 20px;
}

.deployedAppsTitle{
  font-family: 'Bungee Shade', cursive;
  padding-top: 150px;
  color: white;
  font-size: 40px;
  text-shadow: 1px 1px #3c6e71;
  
}

.deployedApp:hover {
    filter: brightness(120%)
  }


.deployedAppImg{
  height: 300px;
  width: 600px;
  border-radius: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.myProjects{
  background-color: #ffd166;
  height:650px;
  transform: skewY(-11deg);
}

.deployedAppsDesc{
  color:white;
  text-shadow: 2px 2px black;
  padding-bottom: 50px;
  font-size: 20px;
  font-family: 'Bungee Inline', cursive;

}
.deployedAppDesc{
  font-family: 'Bungee Inline', cursive;

}

#wtwTitle{
  font-family: 'Bungee Outline', cursive;
  padding-top: 20px;
  font-size: 35px;
  color: #118ab2;

}

#if2Title{
  font-family: 'Bungee Outline', cursive;
  padding-top: 20px;
  color: #ffd166;
  font-size: 35px;

}

#ccTitle{
  font-family: 'Bungee Outline', cursive;
  padding-top: 20px;
  color: #ef476f;
  font-size: 35px;
}



.deployedAppDesc{
  color:white;
  font-size: 20px;
  padding-bottom: 60px;
}


@media only screen and (max-width: 750px) {
  .header{
    padding-top: 10px;
    display: block;
    padding-bottom: 25px;
    max-width: 400px;
  }

  .nameHeader{
    display: inline;
    color: white;
    font-size: 40px;
    text-shadow: 2px 2px black;
    justify-content: center;
  }
  
  .navBar{
    width:inline;
    display: flex;
    font-size: 18px;
    padding-bottom: 10px;
    margin-left: 10px;
    margin-right: 10px;
    color:white; 
    text-shadow: 2px 2px black;
  }

  #nameProfileHeader{
    color:white;
    font-size: 40px;
    border-bottom: 2px solid white;
    margin-right: 1px;
    margin-left: 1px;
    text-shadow: 2px 2px black;
  
  }
  
  #bioProfileHeader{
    color:white;
    font-size: 30px;
    padding-bottom: 10px;
    text-shadow: 2px 2px black;
    margin-top: -30px;
  }


.imageCarousel{
  width: 350px;
  height:300px;
  margin:auto;
  max-height: 300px;
  margin-top: -80px;
  margin-bottom: 50px;
  border-radius: 10px;
  box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
.carousel .slide{
  max-height: 300px;
  
}
.carouselContainer{
  display: block;
  height:900px;
}

.interestsCarousel{
  width: 350px;
  height:300px;
  max-height: 300px;
  margin-top: 50px;
  margin-bottom: 50px;
  margin-left: 10px;
  margin-right: 10px;
  border-radius: 10px;
  box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

#selfieImg{
  width: 100%;
  border-radius: 10px;
  height: 100%;
  max-height: 300px;
}

.officeImgs{
  height:300px;
  border-radius: 10px;
}

  .infoBody{
    display: block;
    height: 100%;
  }
  
  .aboutMe{
    height:800px;
    margin-bottom: 50px;
    border-radius: 10px;

  }
  
  .aboutMeParagraph{
    margin-left: 10px;
    margin-right: 10px;
    font-size: 16px;
    padding-bottom: 10px;
  }
  
  #aboutMeTitle{
    margin-top: -100px;
    font-size: 30px;

  }
  
  .interests{
    width: 100%;
    margin: auto;
    margin-bottom: 50px;
    border-radius: 10px;
  }
  
  #interestTitle{
    font-size: 25px;
  }
  
  #educationTitle{
    font-size: 25px;
  }
  
  .interestList{ 
    text-align: left;
    margin-left: 20px;
    margin-right: 10px;
    font-size: 15px;
    padding-bottom: 10px;
  }
  .interestList li{
    margin-bottom: 5px;
  }

  #projectTitle{
    font-size: 30px;
    padding-top: 70px;
    text-shadow: 2px 2px black;
  }
  
  .contactMe{
    color:white;
    padding-bottom: 20px;;
  }
  
  #contactMeTitle{
    font-size: 30px;
    margin-top: 30px;
    text-shadow: 2px 2px black;
  }
  
.Footer{
    text-align: center;
}

#youtubeDesc{
  text-shadow: 1px 1px black;
  color:white;
  margin-top: -40px;
  font-size: 18px;
  }
  

  .videoContainer{
    padding-top: 10px;
    padding-bottom: 10px;
    width:350px;
  }
  
  .currentProjectTitle{
    font-size: 30px;
    padding-top: 50px;
    margin-left: 10px;
    margin-right: 10px;
    padding-bottom: 5px;

  }
  
  .currentProjectDesc{
    font-weight: bold;
    font-size: 17px;
    margin-left: 10px;
    margin-right: 10px;
    padding-bottom: 30px;
  }

  .currentProject{
    margin-right: 10px;
    margin-left: 10px;
    margin-top: -100px;
    margin-bottom: 50px;
    border-radius: 10px;
    height:1050px;
    box-shadow: 10px 10px 10px 10px rgb,a(0, 0, 0, 0.4) 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  }

  .deployedApps{
    height:400px;
    width: 350px;
    display:block;
    align-items: center;
    background-color: white;
    margin-bottom: 20px;
  }
  
  .deployedAppsTitle{
    font-size: 30px;
    margin-left: 20px;
    margin-right: 20px;
    padding-top: 50px;
    text-shadow: 2px 2px black;
  }
  .deployedAppsContainer{
    padding-top: 100px;
    max-width: 350px;

  }
  .deployedApp{
    height: 600px;
    border: 1px solid lighten(black, 10);
    transition: all 300ms ease-in-out;  
    color:white;
    text-shadow: 2px 2px black;
  } 
  .deployedAppImg{
    height: 300px;
    max-width: 350px;
    border-radius: 10px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  }
  
  .deployedAppsDesc{
    color:white;
    text-shadow: 2px 2px black;
    padding-bottom: 20px;
    font-size: 15px;
    margin-left: 10px;
    margin-right: 10px;
  }
}

